# hash-cli

./: Cargo.toml  README.md
src/: config.rs  eth.rs  format.rs  main.rs  telegram.rs
src/miner/: cpu.rs  mod.rs  opencl.rs
